--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@googlemaps/js-api-loader": "^1.15.1",
     "@tanstack/react-query": "^4.22.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/google.maps": "^3.51.0",
